--- a/kvstore/Cargo.toml
+++ b/kvstore/Cargo.toml
@@ -11,6 +11,7 @@ rust-rocksdb = "0.33.0"
 tokio = { version = "1", features = ["full"] } # Async runtime
 seahash = "4.1.0" # hash function
 clap = { version = "4.0", features = ["derive"] } # for generic N number of servers
+rand = "0.8"  # rand num
 
 [build-dependencies]
 bindgen = "0.64" # fix mac issues with C/C++ binding
